--- a/.github/workflows/pullRequestsDataFetcher.yml
+++ b/.github/workflows/pullRequestsDataFetcher.yml
@@ -13,7 +13,7 @@ jobs:
         id: get_pull_requests
         with:
           query: |
-            query user(login: "mAbdullah1") {
+            query user(login: "abdul-mueed-shz") {
               pullRequests(last: 100, orderBy: {field: CREATED_AT, direction: DESC}) {
                 totalCount
                 nodes {
