--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "name": "abdulsFolio",
-  "homepage": "https://abdulmueed.dev",
   "version": "1.0.0",
+  "homepage": "https://abdulmueed.dev",
   "scripts": {
     "build": "react-scripts build",
     "predeploy": "npm run build",
@@ -22,7 +22,6 @@
     "gh-pages": "^2.2.0",
     "graphql": "^14.5.8",
     "node-fetch": "^2.6.1",
-    "node-sass": "^9.0.0",
     "prettier-package-json": "^2.1.3",
     "radium": "^0.26.0",
     "react": "^16.10.2",
@@ -34,6 +33,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
     "react-spring": "^8.0.27",
+    "sass": "^1.75.0",
     "styled-components": "^5.1.1",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7"
